Can acces user preference in JavaScript and displays the correctly selected value before making a change.

--- a/SportBoard.Web/Views/Manage/Index.cshtml
+++ b/SportBoard.Web/Views/Manage/Index.cshtml
@@ -143,7 +143,7 @@
         });
         var radioBtns = $("[name=sortOptions]");
 
-        var userPreference = '@Html.Raw(Model.UserPreferences.ToString())';
+        var userPreference = @Html.Raw(Json.Encode(Model.UserPreferences.SortOption));
 
         if (userPreference !== null) {
 
