Alert user of a preference update and redirect to index via json response.

--- a/SportBoard.Web/Views/Manage/Index.cshtml
+++ b/SportBoard.Web/Views/Manage/Index.cshtml
@@ -133,6 +133,9 @@
                     contentType: false,
                     processData: false,
                     success: function (response) {
+                        window.location.href = response.Url;
+                        alert("Preference updated!");
+                        
                     },
                     error: function () {
                     }
