Trying to figure out how to pass requestId for each request as I need to have a listener to open a prompt when an admin closes a request.

--- a/SportBoard.Web/Views/Admin/Requests.cshtml
+++ b/SportBoard.Web/Views/Admin/Requests.cshtml
@@ -33,9 +33,43 @@
             <td>@request.AspNetUsers.UserName</td>
             <td><a href="@Url.Action("Details", "Feed", new { id = request.FeedId })">@request.Feed.FeedName</a></td>
             <td>@request.ReasonForDeletion</td>
-            <td><a href="@Url.Action("Delete", "Feed", new { feedId = request.FeedId, requestId = request.RequestId })">Yes</a> | <a href="@Url.Action("CloseRequest", "Admin", new { id = request.RequestId })">No</a></td>
+            <td><a class="acceptRequest" href="#">Yes</a> | <a href="@Url.Action("CloseRequest", "Admin", new { id = request.RequestId })">No</a></td>
+            @Html.Hidden("requestId", request.RequestId, new { Id = "requestId" });
         </tr>
+            
         }
     </tbody>
 </table>
 
+@section scripts {
+    <script>
+        $(document).ready(function() {
+            $('.acceptRequest').click(function () {
+                //var reason = prompt("Please give a response to deleting the feed", "");
+                //if (reason !== "") {
+                //    var requestId = $('#requestId').value;
+                //    var feedId = $('#feedId').value;
+                //    var formData = new FormData();
+                //    formData.append("reason", reason);
+                //    $.ajax({
+                //        type: "POST",
+                //        url: '/Admin/CloseRequest/' + requestId,
+                //        data: formData,
+                //        dataType: 'json',
+                //        contentType: false,
+                //        processData: false,
+                //        done: function (response) {
+                //            window.location.href = response.Url;
+                //        }
+                //    })
+                //}
+
+                var requestId = $('#requestId').value;
+                alert(requestId);
+            });
+        
+        
+        
+        });
+    </script>    
+}
