Now able to get associated feed and request Id in the admin requests table

--- a/SportBoard.Web/Views/Admin/Requests.cshtml
+++ b/SportBoard.Web/Views/Admin/Requests.cshtml
@@ -34,7 +34,8 @@
             <td><a href="@Url.Action("Details", "Feed", new { id = request.FeedId })">@request.Feed.FeedName</a></td>
             <td>@request.ReasonForDeletion</td>
             <td><a class="acceptRequest" href="#">Yes</a> | <a href="@Url.Action("CloseRequest", "Admin", new { id = request.RequestId })">No</a></td>
-            @Html.Hidden("requestId", request.RequestId, new { Id = "requestId" });
+            @Html.Hidden("requestId", request.RequestId, new { Id = "requestId" })
+            @Html.Hidden("feedId", request.FeedId, new { Id = "feedId" })
         </tr>
             
         }
@@ -45,27 +46,29 @@
     <script>
         $(document).ready(function() {
             $('.acceptRequest').click(function () {
-                //var reason = prompt("Please give a response to deleting the feed", "");
-                //if (reason !== "") {
-                //    var requestId = $('#requestId').value;
-                //    var feedId = $('#feedId').value;
-                //    var formData = new FormData();
-                //    formData.append("reason", reason);
-                //    $.ajax({
-                //        type: "POST",
-                //        url: '/Admin/CloseRequest/' + requestId,
-                //        data: formData,
-                //        dataType: 'json',
-                //        contentType: false,
-                //        processData: false,
-                //        done: function (response) {
-                //            window.location.href = response.Url;
-                //        }
-                //    })
-                //}
+                var parentTableRow = $(this).parent().parent();
+                var associatedInput = parentTableRow.children("input");
+                var reason = prompt("Please give a response to deleting the feed", "");
+                if (reason !== "") {
+                    var requestId = associatedInput.first().val();
+                    var feedId = associatedInput.last().val();
+                    var formData = new FormData();
+                    formData.append("reason", reason);
+                    $.ajax({
+                        type: "POST",
+                        url: '/Feed/Delete?feedId=' + feedId + "&requestId=" + requestId,
+                        data: formData,
+                        dataType: 'json',
+                        contentType: false,
+                        processData: false,
+                        done: function (response) {
+                            window.location.href = response.Url;
+                        }
+                    })
+                }
 
-                var requestId = $('#requestId').value;
-                alert(requestId);
+                //var requestId = $('#requestId').value;
+                //alert(requestId);
             });
         
         
