Add empty string to admin response when a user creates a deletion request as it is none nullable in DB

--- a/SportBoard.Web/Views/Admin/Requests.cshtml
+++ b/SportBoard.Web/Views/Admin/Requests.cshtml
@@ -63,8 +63,14 @@
                         processData: false,
                         done: function (response) {
                             window.location.href = response.Url;
+                        },
+                        error: function () {
+                            alert("Unknown error occured. Please try again!");
                         }
                     })
+                }
+                else {
+                    alert("You did not specify a reason, please try again.");
                 }
             });
         
@@ -87,8 +93,14 @@
                         processData: false,
                         done: function (response) {
                             window.location.href = response.Url;
+                        },
+                        error: function () {
+                            alert("Unknown error occured. Please try again!");
                         }
                     })
+                }
+                else {
+                    alert("You did not specify a reason, please try again.");
                 }
             })
         
