Issue where creating a deletion request didn't redirect to the feed

--- a/SportBoard.Web/Views/Feed/Details.cshtml
+++ b/SportBoard.Web/Views/Feed/Details.cshtml
@@ -23,7 +23,7 @@
 {
     <div class="row">
         <div class="col-md-12">
-            <a class="deleteFeed" href="@Url.Action("DeleteFeedRequest","Feed", new { id = Model.Feed.FeedId })"><i class="fas fa-trash-alt"></i></a>
+            <a class="deleteFeed" href="#"><i class="fas fa-trash-alt"></i></a>
         </div>
     </div>
 }
