Moved deletion requests to their own tab - need to remove from user history

--- a/SportBoard.Web/Views/Manage/Index.cshtml
+++ b/SportBoard.Web/Views/Manage/Index.cshtml
@@ -113,6 +113,8 @@
         @Html.ActionLink(@profilePictureText + " Profile Image", "UploadProfilePicture", "Manage", null, new { @class = "btn btn-primary" })
     }
 
+    @Html.ActionLink("View Deletion Requests", "DeletionRequests", "Manage", null, new { @class= "btn btn-primary"})
+
 </div>
 
 @section Scripts{
