--- a/SportBoard.Web/Views/Manage/DeletionRequests.cshtml
+++ b/SportBoard.Web/Views/Manage/DeletionRequests.cshtml
@@ -17,7 +17,7 @@
                     @Html.DisplayName("Reason for Deletion")
                 </th>
                 <th>
-                    @Html.DisplayName("Request Fulfilled")
+                    @Html.DisplayName("Request Closed")
                 </th>
                 <th>
                     @Html.DisplayName("Feed Deleted?")
@@ -32,7 +32,7 @@
                 <tr>
                     <td>@Html.ActionLink(request.Feed.FeedName, "Details", "Feed", new { id = request.FeedId }, new { @style = "font-size: 25px;" })</td>
                     <td><p>@request.ReasonForDeletion</p></td>
-                    <td><p>@request.RequestFulfilled</p></td>
+                    <td><p>@request.RequestClosed</p></td>
                     <td><p>@request.Feed.IsActive</p></td>
                 </tr>
             }
