Created partial view for feeds on search - feeds aren't being returned to view correctly when searched.

--- a/SportBoard.Web/Views/Feed/Search.cshtml
+++ b/SportBoard.Web/Views/Feed/Search.cshtml
@@ -9,43 +9,26 @@
     <div class="form-group">
         <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-            <input type="text" id="Search" placeholder="Search Feeds.." class="form-control />
+            <input type="text" id="Search" placeholder="Search Feeds.." class="form-control"/>
         </div>
     </div>
 </div>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>@Html.DisplayName("Feed Name")</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr></tr>
-        @foreach (var feed in Model)
-        {
-            <tr class="Search">
-                <td>@feed.FeedName</td>
-            </tr>
-        }
-        </tr>
-    </tbody>
-</table>
+@Html.Partial("SearchFeeds", Model)
+
 <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 
 <script>
     $(document).ready(function () {
 
         $("#Search").on("input", function () {
-            var searchText = $(this).val().toLowerCase();
+            var searchText = if;
 
             $.ajax({
                 type: "GET",
                 url: '/Feed/Search?searchText=' + searchText,
-                done: function () {
-                        alert("searched");
-                    }
-                })
+                success: 
+            })
         });
     });
 </script>
