Styling of user notifications screen for different types of notification

--- a/SportBoard.Web/Content/Site.css
+++ b/SportBoard.Web/Content/Site.css
@@ -72,3 +72,13 @@ h6,
     width: 300px;
     height: 250px;
 }
+
+.notificationContainer {
+    margin: 5px 0;
+    background-color: #e9edf1;
+}
+
+.messageHeader {
+    display:flex; 
+    justify-content: space-between;
+}
