--- a/SportBoard.Web/Views/UserNotification/Index.cshtml
+++ b/SportBoard.Web/Views/UserNotification/Index.cshtml
@@ -18,11 +18,49 @@
 <div class="col-md-12">
     @foreach(var notification in Model)
     {
-        <div class="col-md-12 notificationContainer">
-            <p>@User.Identity.Name</p>
-            <p><a href="@Url.Action("Details", "Feed", new { id = notification.FeedId })">@notification.FeedId</a></p>
-            <p>@notification.Message</p>
-            <p>@notification.NotificationType.ToString()</p>
+        var timeDifference = DateTime.Now - notification.CreatedOn;
+    <div class="col-md-12 notificationContainer">
+        <div class="messageHeader">
+            <p>@User.Identity.Name,</p>
+
+
+            @if (timeDifference.TotalHours < 1)
+            {
+                int minutes = (int)timeDifference.TotalMinutes;
+                <p>Created @minutes mins ago</p>
+            }
+            else
+            {
+                int hours = (int)timeDifference.TotalHours;
+                <p>Created @hours hours ago</p>
+            }
+
         </div>
+        <div class="messageContainer">
+            @if (notification.NotificationType.Equals(SportBoard.Data.DAL.NotificationTypes.NewPost))
+            {
+                <p>
+                    Someone created a new <a href="@Url.Action("Details", "Post", new { id = notification.PostId })">post</a>
+                    on your <a href="@Url.Action("Details", "Feed", new { id = notification.FeedId })">feed!</a>
+                </p>
+            }
+            else if (notification.NotificationType.Equals(SportBoard.Data.DAL.NotificationTypes.FeedDeletionRequest))
+            {
+                <p>
+                    You created a feed deletion request for the following <a href="@Url.Action("Details", "Feed", new { id = notification.FeedId })">feed</a>
+                    with the message: "@notification.Message".
+                </p>
+                <p><em>An admin will take a look at your request as soon as possible and get back to you.</em></p>
+            }
+            else if (notification.NotificationType.Equals(SportBoard.Data.DAL.NotificationTypes.FeedDeletionResponse))
+            {
+                
+            }
+            else if (notification.NotificationType.Equals(SportBoard.Data.DAL.NotificationTypes.NewComment))
+            {
+                <p>new comment</p>
+            }
+        </div>
+    </div>
     }
 </div>
