--- a/SportBoard.Web/Content/Site.css
+++ b/SportBoard.Web/Content/Site.css
@@ -82,3 +82,16 @@ h6,
     display:flex; 
     justify-content: space-between;
 }
+
+.commentFooter {
+    display: flex;
+    justify-content: space-between;
+}
+
+.adminControls {
+    margin-left:20px;
+}
+
+.commentCreatorContainer {
+    display:flex;
+}
