Start of displaying unread notifications in nav bar - need to be able to hit API from JS and read back data to display

--- a/SportBoard.Web/Content/Site.css
+++ b/SportBoard.Web/Content/Site.css
@@ -99,3 +99,12 @@ h6,
 #notificationfilterOptions {
     margin-bottom: 15px;
 }
+
+#profilePictureLink{
+    padding: 0;
+}
+
+#unreadNotifications {
+    padding: 15px 0;
+    width: 10px;
+}
