--- a/SportBoard.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SportBoard.Web/Views/Shared/_LoginPartial.cshtml
@@ -26,30 +26,39 @@ else
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
-@{ 
-   
+
+@using (Html.BeginScriptContext())
+{
+    if (Request.IsAuthenticated)
+    {
+
+        Html.AddScriptBlock(
+
+        @<script>
+            var unreadNotificationCount = 0;
+
+            function getUnreadNotifications() {
+                $.ajax({
+                    type: "GET",
+                    url: "/api/notifications?userId=" + '@User.Identity.GetUserId()',
+                    contentType: false,
+                    processData: false,
+                    success: function (response) {
+                        unreadNotificationCount = response.notificationCount;
+                        $('#unreadNotifications').text(unreadNotificationCount);
+                    },
+                    error: function () {
+                        alert("error");
+                    }
+                })
+            }
+
+            $(document).ready(function () {
+                getUnreadNotifications();
+
+            })
+         </script>);
+    }
 }
 
-@*<script>
-    var unreadNotificationCount = 0;
-
-    function getUnreadNotifications() {
-        $.ajax({
-            type: "GET",
-            url: "/api/notifications?userId=" + '@User.Identity.GetUserId()',
-            contentType: false,
-            processData: false,
-            success: function (response) {
-                unreadNotificationCount = response.notificationCount;
-            },
-            error: function () {
-                alert("error");
-            }
-        })
-    }
-
-    $(document).ready(function () {
-        getUnreadNotifications();
-    })
-</script>*@
         
