Add styling if a user has unread notifications - hide if no unread notifications

--- a/SportBoard.Web/Content/Site.css
+++ b/SportBoard.Web/Content/Site.css
@@ -104,7 +104,21 @@ h6,
     padding: 0;
 }
 
-#unreadNotifications {
+/*#unreadNotifications {
     padding: 15px 0;
     width: 10px;
+}*/
+
+.unreadHighlight {
+    background-color: #e85382;
+    transition: 300ms;
+}
+
+.unreadHighlightHover {
+    background-color: #c6154d !important;
+    transition: 300ms;
+}
+
+.hidden {
+    display: none;
 }
